--- a/client/app/Styles/style.css
+++ b/client/app/Styles/style.css
@@ -2,3 +2,11 @@ li {
   display: inline;
 }
 
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+th,td {
+  padding: 15px;
+}
+
